# pcsc-cenxfs-bridge

./: .gitignore  CMakeLists.txt  Context.cpp  EventSupport.h  LICENSE.md  Manager.cpp  Manager.h  PCSCspi.cpp  ReaderChangesMonitor.cpp  Readme.md  Service.h  ServiceContainer.h  Settings.cpp  Settings.h  Task.cpp  Task.h  build.bat  vcpkg.json
PCSC/: Context.h  Status.h
XFS/: DynamicLoader.h  ResetAction.h  Result.h  Status.h  XFSManager.cpp  XFSManager.h
